<resources>
    <string name="app_name">Dogedex</string>
    <string name="female">Female</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="group">Group</string>
    <string name="male">Male</string>

    <string name="error_showing_dog_not_found">error showing dog not found</string>
    <string name="dog_index_format">#%d</string>
    <string name="dog_life_expectancy_format">%s years</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_email">E-mail:</string>
    <string name="hint_password">Password:</string>
    <string name="hint_confirm_password">Confirm Password:</string>
    <string name="tv_registro">Registrate aqui</string>
    <string name="tv_title_registro">do not have an account?</string>
    <string name="text_ingresar">Ingresar</string>
    <string name="text_btn_registrar">Registrar</string>
    <string name="title_registro_usuario">Registro Usuario</string>
    <string name="tv_text_login">\"Hasta que no hayas amado a un animal, \nuna parte de tu alma permanecerá dormida\", \nAnatole France.</string>
    <string name="text_register_user">\"Algunos ángeles no tienen alas, tienen cuatro patas\".</string>
    <string name="lbl_email_error">E-mail is not valid</string>
    <string name="lbl_password_error">Password is not valid</string>
    <string name="lbl_passwords_error">Passwords not match</string>

    <string name="text_user_register_successful">Usuario registrado correctamente</string>
    <string name="text_needs_auth_header_kay">needs_authentication</string>
    <string name="text_error_not_found">error_not_found</string>
    <string name="text_add_dog">Dog Added to list</string>
    <string name="text_requires_permits">You need acept camera permission to use camera.</string>
    <string name="accept_permissions">Accept the permissions</string>
    <string name="accept_permissions_msg">accept the permissions to be able to use the camera.</string>
    <string name="error_photo_uri">Error showing image no photo uri</string>
    <string name="title_activity_dog_detail_compose">DogDetailComposeActivity</string>
    <string name="error_dialog">Oops, something happened!</string>
    <string name="try_again">Try again\n</string>


</resources>