<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_transp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/background_dog"
            android:alpha="0.50">

            <TextView
                android:id="@+id/v_trasparence"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.55"
                android:background="@color/ic_launcher_background"
                android:elevation="@dimen/spacy_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_12sp"
                android:text="@string/tv_text_login"
                android:layout_marginBottom="@dimen/spacy_16dp"
                android:layout_marginStart="@dimen/spacy_16dp"
                android:layout_marginEnd="@dimen/spacy_16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto_bold_italic"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_userName"
                android:layout_width="@dimen/space_220"
                android:layout_height="wrap_content"
                android:textColor="@color/purple_200"
                android:textSize="@dimen/text_size_18sp"
                android:singleLine="true"
                android:minLines="@integer/min"
                android:fontFamily="@font/roboto_bold_italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/ic_launcher_background"
            android:fontFamily="@font/roboto_bold_italic"
            app:layout_constraintTop_toBottomOf="@id/ti_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="@dimen/space_220"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacy_24dp"
                android:textColor="@color/teal_700"
                android:textSize="@dimen/text_size_18sp"
                android:minLines="@integer/min"
                android:singleLine="true"
                android:fontFamily="@font/roboto_bold_italic"
                android:textColorHint="@color/ic_launcher_background"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ti_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_title_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/spacy_4dp"
            android:text="@string/tv_title_registro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_16sp"
            android:minLines="@integer/min"
            android:fontFamily="@font/roboto_bold_italic"
            android:layout_margin="@dimen/spacy_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_pwd" />

        <TextView
            android:id="@+id/tv_registro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/spacy_4dp"
            android:text="@string/tv_registro"
            android:textColor="@color/colorSecondary"
            android:textSize="@dimen/text_size_16sp"
            android:minLines="@integer/min"
            android:fontFamily="@font/roboto_bold_italic"
            android:textColorHint="@color/ic_launcher_background"
            android:layout_margin="@dimen/spacy_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_reg" />

        <TextView
            android:id="@+id/btn_ingresar"
            android:alpha="0.75"
            android:layout_marginTop="@dimen/space_80dp"
            android:elevation="@dimen/spacy_4dp"
            android:layout_width="@dimen/space_220"
            android:layout_height="@dimen/spacy_40dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="@dimen/text_size_20sp"
            android:minLines="@integer/min"
            android:fontFamily="@font/roboto_bold_italic"
            android:background="@drawable/bg_buttom"
            android:text="@string/text_ingresar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_registro" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
